Retrotranslator Changelog
=================================

  - java.util.UUID implemented.
  - JIT Retrotranslator works on IBM JDK and BEA JRockit JDK.
  - Bug fixed: several methods of java.util.concurrent.DelayQueue were not translated properly.

0.9.8 (2006-02-03)
---------------------------------
  - Bug fixed: translated classes didn't work on JRE 1.4.1-b21 where only java.lang.Object may be used
    as qualifying type for array cloning. See http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4750641
  - Limited support for Thread.getStackTrace(). Non-empty stack trace is returned only for current thread.
  - Support for StringBuffer(CharSequence) and for StringBuffer methods: append(CharSequence),
    append(CharSequence, int, int), insert(int, CharSequence), insert(int, CharSequence, int, int)
  - Option "-lazy" was added to transform Java 5.0 bytecode only.
  - Upgrade to backport-util-concurrent 2.1.

0.9.7 (2006-01-12)
---------------------------------
  - Support for EnumMap, Closeable, IllegalStateException(String, Throwable), IllegalStateException(Throwable).
  - Class literal expression (Classname.class) caused class initialization, fixed.
  - A private copy of ASM was put into retrotranslator-runtime-0.9.7.jar to prevent ASM versions conflict.
  - JITRetrotranslator does not require sun.misc.* classes to compile.

0.9.6 (2006-01-05)
---------------------------------
  - Dynamic discovery of backported classes.
  - Full support for generics reflection.
  - Improved java.lang.Enum support.
  - Support for all methods in java.lang.Class.
  - Support for BigDecimal(int), BigDecimal(long).
  - Iterable is distinct from Collection, but even Iterable arrays can hold Collections.
  - Patch 1392759 - build patch to create maven repository deployment units.

0.9.5 (2005-12-28)
---------------------------------
  - Support for EnumSet.
  - Support for methods in Arrays.
  - Partial support for generics reflection.